[package]
name = "x509"
description = "X.509 certificate serialization"
version = "0.2.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
repository = "https://github.com/str4d/x509.rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
# chrono = { version = "0.4", default-features = false }
# cookie-factory = { version = "0.3.2", default-features = false }
cookie-factory = { git = "https://github.com/nickray/cookie-factory", branch = "heapless", default-features = false, features = ["heapless"] }
heapless = { version = "0.6.0" }

# [dev-dependencies]
# x509-parser = "0.9"

[badges]
maintenance = { status = "experimental" }
